--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -29,12 +29,12 @@
 
 			<p>
 			<%= f.label :ingredients %><br>
-			<%= f.cktext_area :ingredients,  :rows => 10, :class => 'ckeditor form-control' %>
+			<%= f.cktext_area :ingredients,  :rows => 10, :class => ' form-control' %>
 			</p>
 
 			<p>
 			<%= f.label :procedure %><br>
-			<%= f.cktext_area :procedure , :rows => 20, :class => ' ckeditor form-control ' %>
+			<%= f.cktext_area :procedure , :rows => 20, :class => '  form-control ' %>
 			</p>
 
 
