--- a/app/views/recipes/edit.html.erb
+++ b/app/views/recipes/edit.html.erb
@@ -26,12 +26,12 @@
 	
 			<p>
 			<%= f.label :ingredients %><br>
-			<%= f.text_area :ingredients,  :rows => 10, :class => 'form-control' %>
+			<%= f.cktext_area :ingredients,  :rows => 10, :class => 'form-control' %>
 			</p>
 
 			<p>
 			<%= f.label :procedure %><br>
-			<%= f.text_area :procedure , :rows => 20, :class => 'form-control ' %>
+			<%= f.cktext_area :procedure , :rows => 20, :class => 'form-control ' %>
 			</p>
 
 
