--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -44,6 +44,7 @@ hr {     border-top: 1px solid #337ab7; }
 
 .nicon { font-size:20px;}
 .navbar-icon { font-size:30px;}
+.navbar-toggle { background-color:#337ab7;}
 div {     font-weight: normal;}
 li.navbar-txt a{
 padding: 7px 14px;
